# Benchmark_DOEs

./: .gitignore  README.md  TSO_DSO_coord.ipynb  init.py  plot_utils.py  pyproject.toml  reference_DOE_case14.ipynb  requirements.txt
Code/: DOE_allocation.ipynb  Digraph.py  IEEE_to_pp.py  Network_test.py  OPF.ipynb  Optimization_problem  TSO_DSO_coord.ipynb  bus_positions.py  check_requirements.py  constraints.py  constraints_DOE.py  constraints_common.py  constraints_doe.py  constraints_opf.py  digraph.py  graph.py  gurobi_config.py  init.py  loader.py  network_test.py  optimization.py  plot_utils.py  pyo_environment.py  types.py
Data/: gurobi_config.py  requirements.txt
archive/: IEEE_to_pp.py  app_types.py  check_requirements.py  constraints_common.py  constraints_doe.py  constraints_opf.py  loader.py  optimization.py  pyo_environment.py
core/: check_requirements.py  constraints_common.py  constraints_doe.py  constraints_opf.py  graph.py  loader.py  optimization.py  pyo_environment.py
data/: gurobi_config.py
docs/: API_REFERENCE.md  EXTENDING.md  README.md
doe/: __init__.py  compute.py  registry.py  types.py
examples/: plot_demo.py
iPython/: DOE_allocation.ipynb  DOE_allocation_Anthony_final (1).ipynb  DOE_allocation_excellent.ipynb  DOE_allocation_excellent_bis.ipynb  DOE_allocation_excellent_final.ipynb  DOE_allocation_good.ipynb  case_14_final.ipynb  reference_DOE (1).ipynb  reference_DOE_case14_absolute_pefection.ipynb  reference_DOE_case14_absolute_perfection.ipynb  reference_DOE_case14_beautiful_graphs.ipynb  reference_DOE_graph.ipynb  (+1 more)
(+60 files in other folders)
