[project]
name = "doe"
version = "0.1.0"
description = "Distribution Operation Envelopes library"
authors = [{name = "DOE"}]
readme = "docs/README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]   # Erreurs classiques + imports
ignore = ["E501"]          # On laisse black gérer la longueur des lignes

[tool.ruff.lint.isort]
known-first-party = ["doe", "viz"]  # project packages
combine-as-imports = true
